# insurance-trend

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: benchmark.py
notebooks/: benchmark.py  demo_break_event_calendar.py  demo_inflation_decomposer.py  demo_loss_cost_trend.py  quickstart.ipynb  run_tests.py  run_tests_coverage.py
src/insurance_trend/: __init__.py  _utils.py  breaks.py  calendar.py  decompose.py  frequency.py  index.py  inflation.py  loss_cost.py  plot.py  result.py  severity.py
tests/: conftest.py  test_breaks.py  test_calendar.py  test_coverage_fitters.py  test_coverage_inflation_index.py  test_coverage_utils_breaks.py  test_decompose.py  test_expanded.py  test_frequency.py  test_index.py  test_inflation.py  test_loss_cost.py  test_result.py  test_severity.py
