[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-trend"
version = "0.1.1"
description = "Loss cost trend analysis for UK personal lines insurance pricing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "actuarial",
    "trend",
    "loss cost",
    "frequency",
    "severity",
    "inflation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "statsmodels>=0.14.5",
    "scipy>=1.10",
    "ruptures>=1.1",
    "matplotlib>=3.6",
    "requests>=2.31",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_trend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
