[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-trend"
version = "0.1.4"
description = "Loss cost trend analysis for UK personal lines insurance pricing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "actuarial",
    "trend",
    "loss cost",
    "frequency",
    "severity",
    "inflation",
    "UK",
    "personal lines",
    "pricing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "statsmodels>=0.14.5",
    "scipy>=1.11",
    "ruptures>=1.1",
    "matplotlib>=3.6",
    "requests>=2.31",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://burning-cost.github.io/insurance-trend"
Repository = "https://github.com/burning-cost/insurance-trend"
Changelog = "https://github.com/burning-cost/insurance-trend/releases"
Documentation = "https://burning-cost.github.io/insurance-trend"
Issues = "https://github.com/burning-cost/insurance-trend/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_trend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
